# electronics-rfq-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODOS.md  docker-compose.yml  erp_catalog.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml  scorecard.yml
benchmarks/: README.md  generate_report.py  run.py
benchmarks/results/: baseline.json
docs/: api.md  getting-started.md  lessons.md
docs/erp-setup/: dynamics.md  epicor.md  oracle.md  sap.md
examples/01-basic-quote/: README.md  basic_quote.py
examples/02-epicor-integration/: README.md  epicor_quote.py
examples/03-docker-self-host/: README.md
examples/04-langgraph-agent/: README.md  langgraph_quote.py
examples/05-openai-agents/: README.md  openai_quote.py
src/electronics_rfq_agent/: __init__.py  agent.py  cli.py  models.py  parser.py  telemetry.py
src/electronics_rfq_agent/mcp/: __init__.py  _oauth.py  base.py  dynamics.py  epicor.py  oracle.py  sap.py
src/electronics_rfq_agent/mcp/mock/: __init__.py  backend.py
src/openquote/: __init__.py  agent.py  cli.py  models.py  parser.py  telemetry.py
src/openquote/mcp/: __init__.py  _oauth.py  base.py  dynamics.py  epicor.py  oracle.py  sap.py
src/openquote/mcp/mock/: __init__.py  backend.py
src/openquote/mcp/mock/data/: catalog.json
tests/: conftest.py
tests/fixtures/: sample_rfq.txt
tests/integration/: test_epicor_mock.py  test_erp_http.py  test_full_pipeline.py  test_sap_mock.py
tests/unit/: test_agent.py  test_cli.py  test_models.py  test_parser.py  test_parser_file.py  test_sap_mock_pyrfc.py
